Update developer info in pom

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
 
     <developers>
         <developer>
-            <id>nalin_makar</id>
+            <id>nullin</id>
             <name>Nalin Makar</name>
+            <email>nullin@nullin.com</email>
         </developer>
     </developers>
 
