--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>simple-parameterized-builds-report</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>hpi</packaging>
 
     <name>Simple Parameterized Builds Report Plugin</name>
@@ -26,7 +26,8 @@
         <connection>scm:git:git://github.com/nullin/simple-parameterized-builds-report.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/nullin/simple-parameterized-builds-report.git</developerConnection>
         <url>https://github.com/nullin/simple-parameterized-builds-report</url>
-    </scm>
+      <tag>simple-parameterized-builds-report-1.2</tag>
+  </scm>
 
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
