--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>simple-parameterized-builds-report</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>1.5</version>
     <packaging>hpi</packaging>
 
     <name>Simple Parameterized Builds Report Plugin</name>
@@ -26,7 +26,7 @@
         <connection>scm:git:git://github.com/nullin/simple-parameterized-builds-report.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/nullin/simple-parameterized-builds-report.git</developerConnection>
         <url>https://github.com/nullin/simple-parameterized-builds-report</url>
-      <tag>HEAD</tag>
+      <tag>simple-parameterized-builds-report-1.5</tag>
   </scm>
 
     <properties>
